Flex fix for navigation display on small viewport

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -150,12 +150,13 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
     margin-top: 0;
     margin-bottom: 0;
     padding: 0;
+    display: flex;
 }
 #header > nav > ul li {
     border-left: solid 1px #3D4F60;
     display: inline-block;
     line-height: 3.5em;
-    min-width: 20%;
+    width: 100%;
     padding: 0;
 }
 #header > nav > ul li a {
